--- a/assets/contracts/2022.md
+++ b/assets/contracts/2022.md
@@ -1,6 +1,6 @@
 Hallo! Du hast dich für ein Fotoshooting entschieden - ich bin Florian Reisinger, dein Fotograf!
 
-![Foto des Fotografen](https://s.gravatar.com/avatar/546494d0c69be1cfc09a02350c43a3ab?s=200)
+![Foto des Fotografen](https://reisinger.pictures/images/nextImageExportOptimizer/me-opt-2050.WEBP)
 
 Als ich 2016 meine erste Kamera in Händen gehalten habe konnte ich mir noch nicht vorstellen, dass ich sie heute kaum
 mehr aus der Hand gebe. Die Fotografie ist mittlerweile - genauso wie mein Beruf als Software-Entwickler - nicht mehr
@@ -9,69 +9,6 @@ wirklich aus meinem Leben wegzudenken.
 Bisher durfte ich über 150 Fotoshootings in den Bereichen Porträt (Beauty / Tanz), Paar und Boudoir (Dessous / Akt)
 veranstalten und so einem Menschen Freude und oft auch ein besseres Selbstbild schenken. Natürlich verpackt in ein
 Erlebnis, das meinen Models und mir auch sehr viel Freude bereitet.
-
-Im Folgenden möchte ich dir zeigen, was meine bisherigen Models über mich bzw. ein Shooting mit mir gesagt haben:
-
-![Frau E. / Boudoir / August 2020](https://reisinger.pictures/images/Boudoir0008_embed.jpg)
-> Die gemeinsame Fotoauswahl nach dem Shooting fand ich sehr gut, da so das Model auch die Chance hat alle Fotos zu
-> sehen und gemeinsam mit der Expertise von Florian die besten Bilder auszuwählen.
-> (Frau E. / Boudoir / August 2020)
----
-![Iris Hammer / Juli 2022 / Beauty](https://reisinger.pictures/images/IrisHammer003_embed.jpg)
-> Ich war vor dem Shooting sehr nervös, weil es erst mein 2tes war und ich Angst hatte, dass ich keine Ideen für Posen
-> habe. Aber das verflog ganz schnell. Florian hatte super Ideen und es machte viel Spaß. Die Bilder sind sehr schön
-> geworden! (Iris Hammer / Juli 2022 / Beauty)
----
-![Frau W. / Februar 2022 / Dessous](https://reisinger.pictures/images/Boudoir0021_embed.jpg)
-
-> Gerade bei einem Shooting mit wenig Kleidung ist das Umfeld sehr entscheidend. Du hast mir geholfen aus mir
-> rauszukommen und neue Sachen auszuprobieren. Dafür bin ich dir sehr dankbar! (Frau W. / Februar 2022 / Dessous)
----
-![Nina B. / Beauty / Juli 2020](https://reisinger.pictures/images/NinaB001_embed.jpg)
-
-> Er kennt psychologische und technische Hintergründe der Fotografie, welches sich in der Qualität der Bilder
-> widerspiegelt. (Nina B. / Beauty / Juli 2020)
----
-![Laura Szabo / Beauty / Juni 2022](https://reisinger.pictures/images/LauraSzabo007_embed.jpg)
-> Ich habe mich sehr wohlgefühlt und hatte viel Spaß! Das Shooting hat mir eindeutig einen Confidence-Boost gegeben :) (
-> Laura Szabo / Beauty / Juni 2022)
----
-![Frau B. / Boudoir / Juli 2020](https://reisinger.pictures/images/Boudoir0002_embed.jpg)
-
-> Während des Shootings gab es Feedback (Verbesserung einer Pose oder einige sneak peak der Fotos), die Stimmung war
-> lässig und freundlich. (Frau B. / Boudoir / Juli 2020)
----
-![Anna Jaschek / Sport / Juni 2021](https://reisinger.pictures/images/AnnaJaschek002_embed.jpg)
-> Ich bin ein eher schüchterner Mensch, doch durch seine offene und motivierende Art, habe ich mehr Selbstvertrauen
-> gewonnen und konnte mich öffnen. (Anna Jaschek / Sport / Juni 2021)
----
-![Eva Freudenthaler / Paar / Juli 2021](https://reisinger.pictures/images/Eva-und-Kevin008_embed.jpg)
-
-> Durch die Fotos sehe ich uns als Paar auch irgendwie anders und es ist schön zu sehen, wie Florian einige tolle
-> Momente eingefangen und was er dann daraus gemacht hat. (Eva Freudenthaler / Paar / Juli 2021)
----
-![Eva Mair / Beauty / Oktober 2021](https://reisinger.pictures/images/EvaMair014_embed.jpg)
-
-> Als er mich zum ersten Mal fragte, ob ich Interesse an einem Shooting mit Ihm hätte, war ich sehr skeptisch, da ich so
-> etwas noch nie gemacht habe und auch in solchen Situationen eher schüchtern bin. Umso mehr war ich überrascht, wie ich
-> trotzdem das Shooting meistern konnte, da ich durch seine lockere Art und seine zahlreichen Tipps mich entspannen
-> konnte. (Eva Mair / Beauty / Oktober 2021)
----
-![Isabella Leutgeb / Beauty / April 2021](https://reisinger.pictures/images/Frau18_embed.jpg)
-
-> Prinzipiell bin ich immer sehr vorsichtig was freizügigere Shootings angeht... Für mich muss das Vertrauen zum
-> Fotograf vorhanden sein. Dieses Vertrauen habe ich gleich in den ersten 5 Minuten aufgebaut. (Isabella Leutgeb /
-> Beauty
-> / April 2021)
----
-![enter image description here](https://reisinger.pictures/images/Boudoir0025_embed.jpg)
-
-> Florian hat tolle Fotos gemacht, ich freu mich schon aufs nächste Mal. (Frau L. / Akt / Juni 2022)
----
-![Susanne Zopf / Tanz / September 2022](https://reisinger.pictures/images/SusanneZopf004_embed.jpg)
-> Das Shooting war sehr lustig und vor allem entspannt. Ich hatte nie das Gefühl, dass das was ich mache irgendwie
-> komisch aussehen könnte, oder dass ich beurteilt werde indem was ich tue.  (Susanne Zopf / Tanz / September 2022)
----
 Grundlegend für ein Fotoshooting sind folgende Faktoren:
 
 ## Zeit
